Closed Bug 1963354 Opened 21 days ago Closed 21 days ago

Fix the GTK version checked for decalring some constants in widget/gtk/nsWindow.cpp

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
140 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox138 --- wontfix
firefox139 --- wontfix
firefox140 --- fixed

People

(Reporter: pierov, Assigned: pierov)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Bug 1919115 introduced this block:

#if !GTK_CHECK_VERSION(3, 22, 0)

constexpr gint GDK_WINDOW_STATE_TOP_TILED = 1 << 9;
constexpr gint GDK_WINDOW_STATE_TOP_RESIZABLE = 1 << 10;
constexpr gint GDK_WINDOW_STATE_RIGHT_TILED = 1 << 11;
constexpr gint GDK_WINDOW_STATE_RIGHT_RESIZABLE = 1 << 12;
constexpr gint GDK_WINDOW_STATE_BOTTOM_TILED = 1 << 13;
constexpr gint GDK_WINDOW_STATE_BOTTOM_RESIZABLE = 1 << 14;
constexpr gint GDK_WINDOW_STATE_LEFT_TILED = 1 << 15;
constexpr gint GDK_WINDOW_STATE_LEFT_RESIZABLE = 1 << 16;

#endif

However, these constants were introduced in GTK 3.22.23 (see https://gitlab.gnome.org/GNOME/gtk/-/blob/gtk-3-22/gdk/gdkevents.h).

Therefore, Firefox fails to Build on Debian 9, which provides GTK 3.22.11.

Set release status flags based on info from the regressing bug 1919115

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f6ce04dd2eaa Refine the GTK version checked before declaring various GDK_WINDOW_STATE... constants. r=emilio
Status: NEW → RESOLVED
Closed: 21 days ago
Resolution: --- → FIXED
Target Milestone: --- → 140 Branch

The patch landed in nightly and beta is affected.
:pierov, is this bug important enough to require an uplift?

For more information, please visit BugBot documentation.

Flags: needinfo?(pierov)
Flags: needinfo?(pierov)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: