Bug 1963354 - Refine the GTK version checked before declaring various GDK_WINDOW_STATE... constants. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D247104